<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbBarras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbBarras" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txBarras"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/ic_launcher"
                android:minHeight="38dip" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbMerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbMerc" />

        <TextView
            android:id="@+id/txMerc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbQuant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbQuant" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txQuant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/btnBkspc"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/remove_256" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbTeclado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbTeclado" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn1" />




            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn2" />




            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn3" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >


            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn4" />


            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn5" />


            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn6" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >


            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn7" />


            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn8" />


            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/btnPonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtnPonto" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbBtn0" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.35"
                android:text="@string/lbBtnLimpar" />






            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.35"
                android:text="@string/lbBtnSalvar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>