<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbVersao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbVersao"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txVersao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#909090" />

        <TextView
            android:id="@+id/lbAutor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbAutor"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txAutor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbAutorNome"
            android:textColor="#909090" />

    </LinearLayout>

</ScrollView>
